Añadir sección 'El IPN en números' con datos y gráfica institucional

--- a/index.html
+++ b/index.html
@@ -117,6 +117,76 @@
             <h1>Bienvenido al IPN</h1>
             <p>Innovación, conocimiento y futuro para México.</p>
         </section>
+
+        <!-- IPN en números -->
+        <section class="section" id="ipn-numeros" style="background: #F5F5F5;">
+            <h2 style="text-align:center; color:#682444; font-family: 'Montserrat', 'Segoe UI', Arial, sans-serif;">El IPN en números</h2>
+            <div style="display: flex; flex-wrap: wrap; gap: 1.5rem; justify-content: center; margin-top: 2rem;">
+                <div style="background: #682444; color: #fff; flex: 1 1 180px; min-width: 180px; max-width: 220px; padding: 2rem; border-radius: 8px; text-align: center;">
+                    <div style="font-size:2.5rem; font-weight:bold;">57</div>
+                    <div style="margin-top:1rem;">Nivel Medio Superior</div>
+                </div>
+                <div style="background: #682444; color: #fff; flex: 1 1 180px; min-width: 180px; max-width: 220px; padding: 2rem; border-radius: 8px; text-align: center;">
+                    <div style="font-size:2.5rem; font-weight:bold;">83</div>
+                    <div style="margin-top:1rem;">Nivel Superior</div>
+                </div>
+                <div style="background: #682444; color: #fff; flex: 1 1 180px; min-width: 180px; max-width: 220px; padding: 2rem; border-radius: 8px; text-align: center;">
+                    <div style="font-size:2.5rem; font-weight:bold;">157</div>
+                    <div style="margin-top:1rem;">Programas Posgrado</div>
+                </div>
+                <div style="background: #A86A8C; color: #fff; flex: 2 1 320px; min-width: 320px; max-width: 340px; padding: 2rem; border-radius: 8px; text-align: left; display: flex; flex-direction: column; justify-content: center;">
+                    <div style="font-size:2.2rem; font-weight:bold; text-align:center;">211,584</div>
+                    <div style="margin-top:1rem;">Estudiantes en el ciclo escolar 2024–2025.</div>
+                    <ul style="margin-top:1rem; margin-bottom:0;">
+                        <li>6,633 en posgrado</li>
+                        <li>131,503 en nivel superior</li>
+                        <li>73,448 en nivel medio superior</li>
+                        <li>11 Laboratorios acreditados</li>
+                    </ul>
+                </div>
+                <div style="background: #682444; color: #fff; flex: 1 1 180px; min-width: 180px; max-width: 220px; padding: 2rem; border-radius: 8px; text-align: center;">
+                    <div style="font-size:2.5rem; font-weight:bold;">93</div>
+                    <div style="margin-top:1rem;">Unidades Académicas</div>
+                </div>
+                <div style="background: #682444; color: #fff; flex: 1 1 180px; min-width: 180px; max-width: 220px; padding: 2rem; border-radius: 8px; text-align: center;">
+                    <div style="font-size:2.2rem; font-weight:bold;">16,358</div>
+                    <div style="margin-top:1rem; font-weight:bold;">Académicos</div>
+                </div>
+                <div style="background: #682444; color: #fff; flex: 1 1 180px; min-width: 180px; max-width: 220px; padding: 2rem; border-radius: 8px; text-align: center;">
+                    <div style="font-size:2.2rem; font-weight:bold;">1,680</div>
+                    <div style="margin-top:1rem;">Académicos en el SNII</div>
+                </div>
+                <div style="background: #682444; color: #fff; flex: 2 1 320px; min-width: 320px; max-width: 340px; padding: 2rem; border-radius: 8px; text-align: left; display: flex; flex-direction: column; justify-content: center;">
+                    <div style="display: flex; justify-content: space-between; align-items: center;">
+                        <div>
+                            <div style="font-size:1.5rem; font-weight:bold;">18,447</div>
+                            <div style="font-weight:bold;">Titulados y graduados</div>
+                            <div style="margin-top:1rem; font-size:0.95rem;">Visita el portal de Información Institucional y consulta las estadísticas más recientes del IPN.</div>
+                        </div>
+                        <div>
+                            <svg width="60" height="60" viewBox="0 0 60 60">
+                                <circle cx="30" cy="30" r="28" fill="#A86A8C" />
+                                <path d="M30,30 L30,2 A28,28 0 0,1 56,30 Z" fill="#fff" />
+                            </svg>
+                            <div style="font-size:0.85rem; text-align:center;">Estadísticas</div>
+                        </div>
+                    </div>
+                    <div style="display: flex; justify-content: space-between; align-items: center; margin-top:1.5rem;">
+                        <div>
+                            <div style="font-size:1.5rem; font-weight:bold;">35,239</div>
+                            <div style="font-weight:bold;">Egresados</div>
+                        </div>
+                        <div>
+                            <svg width="60" height="60" viewBox="0 0 60 60">
+                                <circle cx="30" cy="30" r="28" fill="#A86A8C" />
+                                <path d="M30,30 L30,2 A28,28 0 1,1 2,30 Z" fill="#fff" />
+                            </svg>
+                            <div style="font-size:0.85rem; text-align:center;">Estadísticas</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section" id="seccion1">
             <h2>Sección 1</h2>
             <p>Contenido principal de la sección 1.</p>
