Agregar autor en el footer

--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@
             </div>
         </section>
     </main>
-    <footer>
-        <p>Instituto Politécnico Nacional &copy; 2025. Todos los derechos reservados.</p>
-    </footer>
+        <footer>
+            <p>Instituto Politécnico Nacional &copy; 2025. Todos los derechos reservados.</p>
+            <p style="font-size:0.9rem; margin-top:0.5rem;">by David Cuellar</p>
+        </footer>
 </body>
 </html>
