Actualizar contenido y estilos de la landing page IPN: mejorar navegación, secciones de impacto, testimonios y CTAs; optimizar estilos y responsividad.

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <header>
         <nav>
-            <a href="#hero">Inicio</a>
-            <a href="#seccion1">Sección 1</a>
-            <a href="#seccion2">Sección 2</a>
-            <a href="#seccion3">Sección 3</a>
-            <a href="#seccion4">Sección 4</a>
+            <a href="#hero" title="Página principal">Inicio</a>
+            <a href="#ipn-numeros" title="Estadísticas y cifras importantes">Impacto IPN</a>
+            <a href="#sobre-ipn" title="Conoce más sobre el IPN">Nuestra Institución</a>
+            <a href="#programas-academicos" title="Explora nuestros programas">Oferta Educativa</a>
+            <a href="#ctas" title="Información específica">Tu Camino al IPN</a>
         </nav>
     </header>
     <main>
         <section class="hero" id="hero">
-            <h1>Bienvenido al IPN</h1>
-            <p>Innovación, conocimiento y futuro para México.</p>
+            <h1>Tu Futuro Comienza en el IPN</h1>
+            <p>Forjamos líderes en innovación y tecnología para transformar México.</p>
         </section>
 
         <!-- IPN en números -->
@@ -65,7 +65,11 @@
                         <div>
                             <div style="font-size:1.5rem; font-weight:bold;">18,447</div>
                             <div style="font-weight:bold;">Titulados y graduados</div>
-                            <div style="margin-top:1rem; font-size:0.95rem;">Visita el portal de Información Institucional y consulta las estadísticas más recientes del IPN.</div>
+                            <div style="margin-top:1rem; font-size:0.95rem;">
+                                <a href="#" style="color: #fff; text-decoration: underline;" title="Ver estadísticas completas del IPN">
+                                    Explora nuestro impacto en cifras: Accede al informe completo del IPN 2024-2025 →
+                                </a>
+                            </div>
                         </div>
                         <div>
                             <svg width="60" height="60" viewBox="0 0 60 60">
@@ -117,16 +121,19 @@
             <h2>Testimonios</h2>
             <div class="testimonios">
                 <div class="testimonio">
-                    <p>“El IPN me dio las herramientas para destacar en el mundo profesional.”</p>
-                    <span>— Ana Martínez, egresada de Ingeniería</span>
+                    <p>"En el IPN no solo adquirí conocimientos técnicos; desarrollé habilidades de liderazgo que me llevaron a fundar mi propia startup tecnológica."</p>
+                    <span>— Ana Martínez, Ing. en Sistemas Computacionales '22</span>
+                    <small>Fundadora de TechMX, reconocida por Forbes 30 Under 30</small>
                 </div>
                 <div class="testimonio">
-                    <p>“Aquí encontré una comunidad que impulsa la innovación y el trabajo en equipo.”</p>
-                    <span>— Luis Ramírez, estudiante de Licenciatura</span>
+                    <p>"La formación práctica y el ecosistema de innovación del IPN me permitieron desarrollar proyectos reales desde el primer semestre. Hoy colaboro en soluciones que impactan a millones."</p>
+                    <span>— Luis Ramírez, Ing. Mecatrónica, 8º semestre</span>
+                    <small>Líder de Proyectos en el Club de Robótica IPN</small>
                 </div>
                 <div class="testimonio">
-                    <p>“Gracias al IPN, participé en proyectos de investigación internacional.”</p>
-                    <span>— Sofía Torres, egresada de Posgrado</span>
+                    <p>"El programa de posgrado del IPN me abrió las puertas a la investigación internacional. Actualmente dirijo proyectos de sustentabilidad que están transformando industrias."</p>
+                    <span>— Dra. Sofía Torres, Doctorado en Biotecnología '23</span>
+                    <small>Investigadora principal en el Centro de Biotecnología Avanzada</small>
                 </div>
             </div>
         </section>
@@ -136,16 +143,19 @@
             <h2>¿A quién va dirigido?</h2>
             <div class="ctas">
                 <div class="cta">
-                    <span>Futuros estudiantes</span>
-                    <p>Descubre tu futuro en el IPN. ¡Conoce nuestra oferta académica!</p>
+                    <span>Aspirantes</span>
+                    <p>Da el primer paso hacia tu éxito profesional. Explora nuestros +297 programas académicos y encuentra tu vocación.</p>
+                    <a href="#" class="cta-button" title="Conoce los programas académicos">Descubre tu programa ideal →</a>
                 </div>
                 <div class="cta">
-                    <span>Padres de familia</span>
-                    <p>Asegura la mejor educación para tus hijos. Explora los beneficios del IPN.</p>
+                    <span>Familias</span>
+                    <p>Invierte en el futuro. Conoce por qué el IPN es la mejor opción para una formación integral y de excelencia.</p>
+                    <a href="#" class="cta-button" title="Información para padres">Explora los beneficios →</a>
                 </div>
                 <div class="cta">
-                    <span>Egresados</span>
-                    <p>Conéctate con la comunidad IPN y potencia tu desarrollo profesional.</p>
+                    <span>Comunidad IPN</span>
+                    <p>Mantén vivo el vínculo politécnico. Accede a recursos exclusivos, networking y oportunidades de desarrollo.</p>
+                    <a href="#" class="cta-button" title="Portal de egresados">Conéctate con la red IPN →</a>
                 </div>
             </div>
         </section>
